feat: собрать сайт

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="Фотография пользователя">
+        <img class="profile__avatar" src="./images/avatar.JPG" alt="Фотография пользователя">
         <div class="profile__info">
           <h1 class="profile__name">Милана Тарасова</h1>
           <button class="profile__edit-button line-buttons" type="button"></button>
