--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         </form>
       </div>
     </section>
-    <section class="popup popup_var_pictures">
-      <div class="popup__container popup__container_var_pictures">
-        <button class="popup__close-button popup__close-button_var_pictures service-buttons" type="button"></button>
-        <img class="popup__image">
-        <p class="popup__subscribe"></p>
-      </div>
+    <section class="popup popup_var_pictures" aria-label="Просмотр изображения">
+        <figure class="popup__container popup__container_var_pictures">
+          <button class="popup__close-button popup__close-button_var_pictures service-buttons" type="button"></button>
+          <img class="popup__image" src="#" alt="#">
+          <figcaption class="popup__subscribe"></figcaption>
+        </figure>
     </section>
     <template class="cards__template">
       <li class="cards__item">
-        <img class="cards__image">
+        <img class="cards__image" src="#" alt="#">
         <h2 class="cards__title"></h2>
         <button class="cards__like-button" type="button"></button>
         <button class="cards__reset-button service-buttons" type="button"></button>
