--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
       </li>
     </template>
   </div>
-  <script src="./scripts/constants.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/script.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
