--- a/src/index.html
+++ b/src/index.html
@@ -1,163 +1,116 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mesto Russia</title>
-  </head>
 
-  <body>
-    <div class="page">
-      <header class="header">
-        <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип" />
-      </header>
-      <main class="content">
-        <section class="profile">
-          <img
-            class="profile__avatar"
-            src="<%=require('./images/avatar.JPG')%>"
-            alt="Фотография пользователя"
-          />
-          <div class="profile__info">
-            <h1 class="profile__name">Милана</h1>
-            <button
-              class="profile__edit-button service-buttons"
-              type="button"
-            ></button>
-            <p class="profile__bio">
-              Art is to find unusual in ordinary &#128248;
-            </p>
-          </div>
-          <button
-            class="profile__add-button service-buttons"
-            type="button"
-          ></button>
-        </section>
-        <section class="elements" aria-label="Галерея">
-          <ul class="cards"></ul>
-        </section>
-      </main>
-      <footer class="footer">
-        <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
-      </footer>
-      <div class="popup popup_var_edit">
-        <div class="popup__container">
-          <button
-            class="popup__close-button popup__close-button_var_edit service-buttons"
-            type="button"
-          ></button>
-          <h2 class="popup__heading">Редактировать профиль</h2>
-          <form
-            class="popup__item popup__item_var_edit"
-            name="edit-profile"
-            novalidate
-          >
-            <input
-              class="popup__field popup__field_el_name-area"
-              id="name-input"
-              type="text"
-              name="name"
-              placeholder="Имя"
-              minlength="2"
-              maxlength="40"
-              required
-            />
-            <span
-              class="popup__error popup__error_visible"
-              id="name-input-error"
-            ></span>
-            <input
-              class="popup__field popup__field_el_about-area"
-              id="about-input"
-              type="text"
-              name="about"
-              placeholder="О себе"
-              minlength="2"
-              maxlength="200"
-              required
-            />
-            <span
-              class="popup__error popup__error_visible"
-              id="about-input-error"
-            ></span>
-            <button
-              class="popup__submit-button popup__submit-button_valid popup__submit-button_var_edit"
-              type="submit"
-            >
-              Сохранить
-            </button>
-          </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mesto Russia</title>
+</head>
+
+<body>
+  <div class="page">
+    <header class="header">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип" />
+    </header>
+    <main class="content">
+      <section class="profile">
+        <button class="profile__avatar-button" type="button">
+          <img class="profile__avatar" src="" alt="Фотография пользователя">
+        </button>
+        <div class="profile__info">
+          <h1 class="profile__name"></h1>
+          <button class="profile__edit-button service-buttons" type="button"></button>
+          <p class="profile__bio"></p>
         </div>
+        <button class="profile__add-button service-buttons" type="button"></button>
+      </section>
+      <section class="elements" aria-label="Галерея">
+        <ul class="cards"></ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
+    </footer>
+    <div class="popup popup_var_edit">
+      <div class="popup__container">
+        <button class="popup__close-button popup__close-button_var_edit service-buttons" type="button"></button>
+        <h2 class="popup__heading">Редактировать профиль</h2>
+        <form class="popup__item popup__item_var_edit" name="edit-profile" novalidate>
+          <input class="popup__field popup__field_el_name-area" id="name-input" type="text" name="name"
+            placeholder="Имя" minlength="2" maxlength="40" required />
+          <span class="popup__error popup__error_visible" id="name-input-error"></span>
+          <input class="popup__field popup__field_el_about-area" id="about-input" type="text" name="about"
+            placeholder="О себе" minlength="2" maxlength="200" required />
+          <span class="popup__error popup__error_visible" id="about-input-error"></span>
+          <button class="popup__submit-button popup__submit-button_valid popup__submit-button_var_edit" type="submit">
+            Сохранить
+          </button>
+        </form>
       </div>
-      <div class="popup popup_var_add">
-        <div class="popup__container">
-          <button
-            class="popup__close-button popup__close-button_var_add service-buttons"
-            type="button"
-          ></button>
-          <h2 class="popup__heading">Новое место</h2>
-          <form
-            class="popup__item popup__item_var_add"
-            name="add-pictures"
-            novalidate
-          >
-            <input
-              class="popup__field popup__field_el_title-area"
-              id="title-input"
-              type="text"
-              name="title"
-              placeholder="Название"
-              minlength="2"
-              maxlength="30"
-              required
-            />
-            <span
-              class="popup__error popup__error_visible"
-              id="title-input-error"
-            ></span>
-            <input
-              class="popup__field popup__field_el_link-area"
-              id="link-input"
-              type="url"
-              name="image"
-              placeholder="Ссылка на картинку"
-              required
-            />
-            <span
-              class="popup__error popup__error_visible"
-              id="link-input-error"
-            ></span>
-            <button
-              class="popup__submit-button popup__submit-button_valid popup__submit-button_var_add"
-              type="submit"
-            >
-              Сохранить
-            </button>
-          </form>
-        </div>
-      </div>
-      <div class="popup popup_var_pictures">
-        <figure class="popup__container popup__container_var_pictures">
-          <button
-            class="popup__close-button popup__close-button_var_pictures service-buttons"
-            type="button"
-          ></button>
-          <img class="popup__image" src="#" alt="#" />
-          <figcaption class="popup__subscribe"></figcaption>
-        </figure>
-      </div>
-      <template class="cards__template">
-        <li class="cards__item">
-          <img class="cards__image" src="#" alt="#" />
-          <h2 class="cards__title"></h2>
-          <button class="cards__like-button" type="button"></button>
-          <button
-            class="cards__reset-button service-buttons"
-            type="button"
-          ></button>
-        </li>
-      </template>
     </div>
-  </body>
+    <div class="popup popup_var_upd-avatar">
+      <div class="popup__container">
+        <button class="popup__close-button popup__close-button_var_upd-avatar service-buttons" type="button"></button>
+        <h2 class="popup__heading">Обновить аватар</h2>
+        <form class="popup__item popup__item_var_upd-avatar" name="upd-avatar" novalidate>
+          <input class="popup__field popup__field_el_ava-link" id="ava-link-input" type="url" name="avatar"
+            placeholder="Ссылка на картинку" required />
+          <span class="popup__error popup__error_visible" id="ava-link-input-error"></span>
+          <button class="popup__submit-button popup__submit-button_valid popup__submit-button_var_upd-avatar"
+            type="submit">
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_var_add">
+      <div class="popup__container">
+        <button class="popup__close-button popup__close-button_var_add service-buttons" type="button"></button>
+        <h2 class="popup__heading">Новое место</h2>
+        <form class="popup__item popup__item_var_add" name="add-pictures" novalidate>
+          <input class="popup__field popup__field_el_title-area" id="title-input" type="text" name="title"
+            placeholder="Название" minlength="2" maxlength="30" required />
+          <span class="popup__error popup__error_visible" id="title-input-error"></span>
+          <input class="popup__field popup__field_el_place-link" id="place-link-input" type="url" name="image"
+            placeholder="Ссылка на картинку" required />
+          <span class="popup__error popup__error_visible" id="place-link-input-error"></span>
+          <button class="popup__submit-button popup__submit-button_valid popup__submit-button_var_add" type="submit">
+            Создать
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_var_confirm">
+      <div class="popup__container">
+        <button class="popup__close-button popup__close-button_var_confirm service-buttons" type="button"></button>
+        <h2 class="popup__heading popup__heading_var_confirm">Вы уверены?</h2>
+        <button class="popup__submit-button popup__submit-button_valid popup__submit-button_var_confirm" type="submit">
+          Да
+        </button>
+      </div>
+    </div>
+    <div class="popup popup_var_pictures">
+      <figure class="popup__container popup__container_var_pictures">
+        <button class="popup__close-button popup__close-button_var_pictures service-buttons" type="button"></button>
+        <img class="popup__image" src="#" alt="#" />
+        <figcaption class="popup__subscribe"></figcaption>
+      </figure>
+    </div>
+    <template class="cards__template">
+      <li class="cards__item">
+        <img class="cards__image" src="#" alt="#" />
+        <h2 class="cards__title"></h2>
+        <div class="like">
+          <div class="like__wrapper">
+            <button class="like__button" type="button"></button>
+            <p class="like__counter"></p>
+          </div>
+        </div>
+        <button class="cards__reset-button service-buttons" type="button"></button>
+      </li>
+    </template>
+  </div>
+</body>
+
 </html>
