--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <main class="content">
       <section class="profile">
         <button class="profile__avatar-button" type="button">
-          <img class="profile__avatar" src="" alt="Фотография пользователя">
+          <img class="profile__avatar" src="#" alt="Фотография пользователя">
         </button>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
